MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V6.19', folder: 'D:\APPs\Keil_v5\ARM\ARMCLANG\Bin'
Build target 'Ske_FollowControl_F4_RTOS'
../Core/Src/main.c(32): warning: In file included from...../Core/Inc\Sensors_reading.h(13): warning: typedef requires a name [-Wmissing-declarations]
typedef struct ids830_PID;
^~~~~~~
../Core/Inc\Sensors_reading.h(18): error: must use 'struct' tag to refer to type 'ids830_PID'
float ids830_compensation_PID_Cal(ids830_PID *pid, int32_t NowValue, int32_t AimValue);
                                  ^
                                  struct 
1 warning and 1 error generated.
compiling main.c...
../Core/Src/lkmoto.c(9): warning: In file included from...../Core/Inc\Sensors_reading.h(13): warning: typedef requires a name [-Wmissing-declarations]
typedef struct ids830_PID;
^~~~~~~
../Core/Inc\Sensors_reading.h(18): error: must use 'struct' tag to refer to type 'ids830_PID'
float ids830_compensation_PID_Cal(ids830_PID *pid, int32_t NowValue, int32_t AimValue);
                                  ^
                                  struct 
../Core/Src/lkmoto.c(1198): warning: format specifies type 'double' but the argument has type 'float *' [-Wformat]
        , LinAcr_position_float, LinAcr_current_float, LinAcr_speed_float, ADC_Pressure_Value, motor_current_float[2], motor_speed_float[2], motorAngle_float[2]
                                                                           ^~~~~~~~~~~~~~~~~~
2 warnings and 1 error generated.
compiling lkmoto.c...
../Core/Src/fourier_series_traj_exciting.c(8): warning: In file included from...../Core/Inc\Sensors_reading.h(13): warning: typedef requires a name [-Wmissing-declarations]
typedef struct ids830_PID;
^~~~~~~
../Core/Inc\Sensors_reading.h(18): error: must use 'struct' tag to refer to type 'ids830_PID'
float ids830_compensation_PID_Cal(ids830_PID *pid, int32_t NowValue, int32_t AimValue);
                                  ^
                                  struct 
../Core/Src/fourier_series_traj_exciting.c(351): warning: format specifies type 'double' but the argument has type 'float *' [-Wformat]
                , LinAcr_position_float, LinAcr_current_float, LinAcr_speed_float, ADC_Pressure_Value
                                                                                   ^~~~~~~~~~~~~~~~~~
2 warnings and 1 error generated.
compiling fourier_series_traj_exciting.c...
../Core/Src/Sensors_reading.c(3): warning: In file included from...../Core/Inc\Sensors_reading.h(13): warning: typedef requires a name [-Wmissing-declarations]
typedef struct ids830_PID;
^~~~~~~
../Core/Inc\Sensors_reading.h(18): error: must use 'struct' tag to refer to type 'ids830_PID'
float ids830_compensation_PID_Cal(ids830_PID *pid, int32_t NowValue, int32_t AimValue);
                                  ^
                                  struct 
1 warning and 1 error generated.
compiling Sensors_reading.c...
"Ske_FollowControl_F4_RTOS\Ske_FollowControl_F4_RTOS.axf" - 4 Error(s), 6 Warning(s).
Target not created.
Build Time Elapsed:  00:00:01
